1.vpc.tf
resource "aws_vpc" "Prof_Cloud_VPC" {
  cidr_block           = "10.53.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "Prof Cloud VPC"

  }
}
